<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gaurav.mydiary.MainActivity">


    <TextView
        android:text="@string/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/ttitle"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:textSize="32sp"/>

    <TextView
        android:text="@string/enter_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ttitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="48dp"
        android:textSize="15sp"
        android:id="@+id/tname" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText_name"
        android:layout_alignBaseline="@+id/tname"
        android:layout_alignBottom="@+id/tname"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
        <requestFocus/>
    </EditText>


    <TextView
        android:text="@string/enter_phone_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="36dp"

        android:id="@+id/tphone" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:maxLength="10"
        android:ems="10"
        android:id="@+id/editText_phone"
        android:layout_alignBaseline="@+id/tphone"
        android:layout_alignBottom="@+id/tphone"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/enter_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_phone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp"
        android:id="@+id/temail" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText_email"
        android:layout_alignBaseline="@+id/temail"
        android:layout_alignBottom="@+id/temail"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/BtnSubmit"
        android:layout_toRightOf="@+id/BtnSubmit"
        android:layout_toEndOf="@+id/BtnSubmit"
        android:id="@+id/BtnClear" />

    <Button
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="79dp"
        android:id="@+id/BtnSubmit"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/tname"
        android:layout_toEndOf="@+id/tname" />


</RelativeLayout>
